codes for analysis

--- a/Notebooks/Project Stage - III.ipynb
+++ b/Notebooks/Project Stage - III.ipynb
@@ -59,6 +59,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear regression model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def country_calculation(df_all,country,date,day):\n",
+    "    df_country = df_all.copy()\n",
+    "    df_country = df_country.loc[df_country['Date'] >= date]\n",
+    "    df_country = df_country.loc[df_country['Country'] == country_dict[country]]\n",
+    "    features = ['iso_code', 'continent', 'location','total_cases', 'total_deaths', 'date']\n",
+    "    df_country = df_country[features]\n",
+    "    \n",
+    "    # Lags\n",
+    "    df_country = lag_feature(df_country, 'total_cases',range(1, 40))\n",
+    "    df_country = lag_feature(df_country, 'total_deaths', range(1,20))\n",
+    "\n",
+    "    filter_col_confirmed = [col for col in df_country if col.startswith('total_cases')]\n",
+    "    filter_col_fatalities= [col for col in df_country if col.startswith('Fataliti')]\n",
+    "    filter_col = np.append(filter_col_confirmed, filter_col_fatalities)\n",
+    "    \n",
+    "    # Apply log transformation\n",
+    "    df_country[filter_col] = df_country[filter_col].apply(lambda x: np.log1p(x))\n",
+    "    df_country.replace([np.inf, -np.inf], 0, inplace=True)\n",
+    "    df_country.fillna(0, inplace=True) ####\n",
+    "    \n",
+    "    # Start/end of forecast\n",
+    "    start = df_country[df_country['Id']==-999].Day_num.min()\n",
+    "    end = df_country[df_country['Id']==-999].Day_num.max()\n",
+    "    #\n",
+    "    for d in range(start,end+1):\n",
+    "   \n",
+    "        X_train_1, X_train_2, Y_train_1, Y_train_2, x_test_1, x_test_2 = train_test_split_extend(df_country,d,day,filter_col_confirmed,filter_col_fatalities)\n",
+    "        \n",
+    "        regr_1, pred_1 = lin_reg(X_train_1, Y_train_1, x_test_1)\n",
+    "        df_country.loc[(df_country['Day_num'] == d) & (df_country['Country'] == country_dict[country]), 'total_cases'] = pred_1[0]\n",
+    "        \n",
+    "        regr_2, pred_2 = lin_reg(X_train_2, Y_train_2, x_test_2)\n",
+    "        df_country.loc[(df_country['Day_num'] == d) & (df_country['Country'] == country_dict[country]), 'Fatalities'] = pred_2[0]\n",
+    "        \n",
+    "        df_country = lag_feature(df_country, 'total_cases',range(1, 40))\n",
+    "        df_country = lag_feature(df_country, 'Fatalities', range(1,20))\n",
+    "\n",
+    "        df_country.replace([np.inf, -np.inf], 0, inplace=True)\n",
+    "        df_country.fillna(0, inplace=True)\n",
+    "        \n",
+    "    print(\"Calculation done.\")\n",
+    "    return df_country\n",
+    "    \n",
+    "    df_check = country_calculation(df_all, 'Germany', '2020-03-10', 48)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
