--- a/Notebooks/Project Stage - II.ipynb
+++ b/Notebooks/Project Stage - II.ipynb
@@ -2234,10 +2234,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date                                 0.000000\n",
+       "state                                0.000000\n",
+       "death                                4.090472\n",
+       "deathConfirmed                      54.658325\n",
+       "deathIncrease                        0.000000\n",
+       "deathProbable                       63.460058\n",
+       "hospitalized                        40.413859\n",
+       "hospitalizedCumulative              40.413859\n",
+       "hospitalizedCurrently               16.559192\n",
+       "hospitalizedIncrease                 0.000000\n",
+       "inIcuCumulative                     81.766121\n",
+       "inIcuCurrently                      44.003850\n",
+       "negative                            36.044273\n",
+       "negativeIncrease                     0.000000\n",
+       "negativeTestsAntibody               92.983638\n",
+       "negativeTestsPeopleAntibody         95.322425\n",
+       "negativeTestsViral                  75.822907\n",
+       "onVentilatorCumulative              93.792108\n",
+       "onVentilatorCurrently               56.082772\n",
+       "positive                             0.904716\n",
+       "positiveCasesViral                  31.443696\n",
+       "positiveIncrease                     0.000000\n",
+       "positiveScore                        0.000000\n",
+       "positiveTestsAntibody               83.897979\n",
+       "positiveTestsAntigen                89.254090\n",
+       "positiveTestsPeopleAntibody         94.735322\n",
+       "positiveTestsPeopleAntigen          96.953802\n",
+       "positiveTestsViral                  56.891242\n",
+       "recovered                           42.237729\n",
+       "totalTestEncountersViral            74.826756\n",
+       "totalTestEncountersViralIncrease     0.000000\n",
+       "totalTestResults                     0.798845\n",
+       "totalTestResultsIncrease             0.000000\n",
+       "totalTestsAntibody                  76.953802\n",
+       "totalTestsAntigen                   83.537055\n",
+       "totalTestsPeopleAntibody            89.412897\n",
+       "totalTestsPeopleAntigen             95.192493\n",
+       "totalTestsPeopleViral               55.741097\n",
+       "totalTestsPeopleViralIncrease        0.000000\n",
+       "totalTestsViral                     30.144370\n",
+       "totalTestsViralIncrease              0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "date                                 0.000000\n",
+       "state                                0.000000\n",
+       "death                                4.090472\n",
+       "deathConfirmed                      54.658325\n",
+       "deathIncrease                        0.000000\n",
+       "deathProbable                       63.460058\n",
+       "hospitalized                        40.413859\n",
+       "hospitalizedCumulative              40.413859\n",
+       "hospitalizedCurrently               16.559192\n",
+       "hospitalizedIncrease                 0.000000\n",
+       "inIcuCumulative                     81.766121\n",
+       "inIcuCurrently                      44.003850\n",
+       "negative                            36.044273\n",
+       "negativeIncrease                     0.000000\n",
+       "negativeTestsAntibody               92.983638\n",
+       "negativeTestsPeopleAntibody         95.322425\n",
+       "negativeTestsViral                  75.822907\n",
+       "onVentilatorCumulative              93.792108\n",
+       "onVentilatorCurrently               56.082772\n",
+       "positive                             0.904716\n",
+       "positiveCasesViral                  31.443696\n",
+       "positiveIncrease                     0.000000\n",
+       "positiveScore                        0.000000\n",
+       "positiveTestsAntibody               83.897979\n",
+       "positiveTestsAntigen                89.254090\n",
+       "positiveTestsPeopleAntibody         94.735322\n",
+       "positiveTestsPeopleAntigen          96.953802\n",
+       "positiveTestsViral                  56.891242\n",
+       "recovered                           42.237729\n",
+       "totalTestEncountersViral            74.826756\n",
+       "totalTestEncountersViralIncrease     0.000000\n",
+       "totalTestResults                     0.798845\n",
+       "totalTestResultsIncrease             0.000000\n",
+       "totalTestsAntibody                  76.953802\n",
+       "totalTestsAntigen                   83.537055\n",
+       "totalTestsPeopleAntibody            89.412897\n",
+       "totalTestsPeopleAntigen             95.192493\n",
+       "totalTestsPeopleViral               55.741097\n",
+       "totalTestsPeopleViralIncrease        0.000000\n",
+       "totalTestsViral                     30.144370\n",
+       "totalTestsViralIncrease              0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# check the missing data \n",
+    "display(states_data.isnull().sum()/len(states_data)*100)\n",
+    "display(states_data.isnull().sum()/len(states_data)*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lowest date in the states data set is 2020-01-13 00:00:00 and the highest 2021-03-07 00:00:00.\n",
+      "The lowest date in the covid data set is 2020-01-01 00:00:00 and the highest 2021-11-15 00:00:00.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check for data range in both datasets\n",
+    "print(\"The lowest date in the states data set is {} and the highest {}.\".format(states_data['date'].min(),states_data['date'].max()))\n",
+    "print(\"The lowest date in the covid data set is {} and the highest {}.\".format(data['date'].min(),data['date'].max()))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modelling the data "
+   ]
   },
   {
    "cell_type": "code",
