--- a/Notebooks/Project Stage - II.ipynb
+++ b/Notebooks/Project Stage - II.ipynb
@@ -2368,8 +2368,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modelling the data "
+    "## Hypothesis "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Null : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
